deploy: 86878c53466cd3b8ea829be47bc9c918ed673aa2

--- a/Lab-EFREST/index.html
+++ b/Lab-EFREST/index.html
@@ -989,7 +989,7 @@
 <p>A labor elvégzéséhez használható segédanyagok és felkészülési anyagok:</p>
 <ul>
 <li>Entity Framework, REST API, Web API elméleti háttere és mintapéldái, valamint a Postman használata<ul>
-<li>Lásd az Adatvezérelt rendszerek c. tárgy <a href="https://www.aut.bme.hu/Course/adatvezerelt">jegyzetei</a> és <a href="https://bmeviauac01.github.io/gyakorlatok/">gyakorlati anyagai</a> között</li>
+<li>Lásd az Adatvezérelt rendszerek c. tárgy <a href="https://www.aut.bme.hu/Course/adatvezerelt">jegyzetei</a> és <a href="https://bmeviauac01.github.io/adatvezerelt/">gyakorlati anyagai</a> között</li>
 </ul>
 </li>
 <li>Hivatalos Microsoft tutorial <a href="https://docs.microsoft.com/en-us/aspnet/core/tutorials/first-web-api?view=aspnetcore-3.1&amp;tabs=visual-studio">Web API készítéséhez</a></li>
