--- a/Lab-QueryOptimization/index.html
+++ b/Lab-QueryOptimization/index.html
@@ -995,14 +995,14 @@
 </li>
 <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> vagy más, markdown kompatibilis szerkesztő</li>
 <li><a href="https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms">SQL Server Management Studio</a>, vagy kipróbálható a platformfüggetlen <a href="https://docs.microsoft.com/en-us/sql/azure-data-studio/download">Azure Data Studio</a> is</li>
-<li>Az adatbázist létrehozó script: <a href="https://raw.githubusercontent.com/bmeviauac01/gyakorlatok/master/mssql.sql">mssql.sql</a></li>
+<li>Az adatbázist létrehozó script: <a href="https://bmeviauac01.github.io/adatvezerelt/db/mssql.sql">mssql.sql</a></li>
 <li>GitHub account és egy git kliens</li>
 </ul>
 <p>A labor elvégzéséhez használható segédanyagok és felkészülési anyagok:</p>
 <ul>
 <li>Markdown formátum <a href="https://guides.github.com/features/mastering-markdown/">rövid ismertetője</a> és <a href="https://help.github.com/en/github/writing-on-github/basic-writing-and-formatting-syntax">részletes dokumentációja</a></li>
-<li>Microsoft SQL Server használata: <a href="https://bmeviauac01.github.io/gyakorlatok/Adatbazis/mssql-server.html">leírás</a> és <a href="https://youtu.be/gmY8reqSL7U">videó</a></li>
-<li>Az adatbázis <a href="https://bmeviauac01.github.io/gyakorlatok/Adatbazis/sema.html">sémájának leírása</a></li>
+<li>Microsoft SQL Server használata: <a href="https://bmeviauac01.github.io/adatvezerelt/db/mssql/">leírás</a> és <a href="https://youtu.be/gmY8reqSL7U">videó</a></li>
+<li>Az adatbázis <a href="https://bmeviauac01.github.io/adatvezerelt/db/">sémájának leírása</a></li>
 <li>Microsoft SQL Server lekérdezés optimalizálása<ul>
 <li>Lásd az Adatvezérelt rendszerek c. tárgy <a href="https://www.aut.bme.hu/Course/adatvezerelt">jegyzetei</a> között</li>
 </ul>
@@ -1069,7 +1069,7 @@
 <p>Hozz létre egy új adatbázist (ha még nem létezik). Az adatbázis neve legyen a Neptun kódod: <em>Object Explorer</em>-ben Databases-en jobb kattintás, és <em>Create Database</em>.</p>
 </li>
 <li>
-<p>Hozd létre a minta adatbázist a <a href="https://raw.githubusercontent.com/bmeviauac01/gyakorlatok/master/mssql.sql">generáló script</a> lefuttatásával. Nyiss egy új <em>Query</em> ablakot, másold be a script tartalmát, és futtasd le. Ügyelj az eszköztáron levő legördülő menüben a megfelelő adatbázis kiválasztására.</p>
+<p>Hozd létre a minta adatbázist a <a href="https://bmeviauac01.github.io/adatvezerelt/db/mssql.sql">generáló script</a> lefuttatásával. Nyiss egy új <em>Query</em> ablakot, másold be a script tartalmát, és futtasd le. Ügyelj az eszköztáron levő legördülő menüben a megfelelő adatbázis kiválasztására.</p>
 <p><img alt="Adatbázis kiválasztása" src="../images/sql-management-database-dropdown.png" /></p>
 </li>
 <li>
