deploy: b8e0bf5fd68858ca426494b9d7efd669c2ae7f7d

--- a/Lab-ReportingServices/Feladat-2/index.html
+++ b/Lab-ReportingServices/Feladat-2/index.html
@@ -932,7 +932,7 @@
 <p>Ezzel azt érjük el, hogy a vízszintes tengelyen az alkategória szerint külön oszlop csoportokat kapunk, és a dátum szerint pedig külön oszlop sorozatokat.</p>
 </li>
 <li>
-<p>A <code>[Date]</code> feliraton jobb klikkeljünk, és válasszuk a <em>Series Groups Properties</em>-t. Itt nyomjuk meg a <em>Group Expressions</em> csoportban az <strong><em>fx</em></strong> gombot</p>
+<p>A <code>[Date]</code> feliraton jobb klikkeljünk, és válasszuk a <em>Series Groups Properties</em>-t. Itt nyomjuk meg a <em>Group Expressions</em> csoportban az <strong><em>fx</em></strong> gombot.</p>
 <p><img alt="Expression megadása" src="../../images/reportingservices/rs-chart-group-expression.png" /></p>
 <p>A megjelenő ablakban írjuk be: <code>=Year(Fields!Date.Value)</code></p>
 <p><img alt="Expression értéke" src="../../images/reportingservices/rs-chart-group-expression2.png" /></p>
