--- a/Lab-ReportingServices/Feladat-3/index.html
+++ b/Lab-ReportingServices/Feladat-3/index.html
@@ -968,8 +968,7 @@
 <p>Az előbb megosztottá konvertáltuk a data source-t és dataset-et. Ezeket fogjuk egy új riportban felhasználni.</p>
 <ol>
 <li>
-<p><em>Solution Explorer</em>-ben jobb klikk a <em>Reports</em> mappára &gt; <em>Add new
-   item</em> &gt; <em>Report</em>. Az új riport neve legyen "Sales People".</p>
+<p><em>Solution Explorer</em>-ben jobb klikk a <em>Reports</em> mappára &gt; <em>Add new item</em> &gt; <em>Report</em>. Az új riport neve legyen "Sales People".</p>
 </li>
 <li>
 <p>Nyissuk meg az új riportot. Az új riporthoz még nincsenek adatforrások. A <em>Report Data</em> panelen vegyük fel a már meglevő adatforrásokat:</p>
