--- a/Lab-EFREST/Feladat-4/index.html
+++ b/Lab-EFREST/Feladat-4/index.html
@@ -889,13 +889,13 @@
       <span class="nt">&quot;id&quot;</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span>
       <span class="nt">&quot;title&quot;</span><span class="p">:</span> <span class="s2">&quot;doing homework&quot;</span><span class="p">,</span>
       <span class="nt">&quot;done&quot;</span><span class="p">:</span> <span class="kc">false</span><span class="p">,</span>
-      <span class="nt">&quot;statusz&quot;</span><span class="p">:</span> <span class="s2">&quot;pending&quot;</span>
+      <span class="nt">&quot;status&quot;</span><span class="p">:</span> <span class="s2">&quot;pending&quot;</span>
     <span class="p">},</span>
     <span class="p">{</span>
       <span class="nt">&quot;id&quot;</span><span class="p">:</span> <span class="mi">2</span><span class="p">,</span>
       <span class="nt">&quot;title&quot;</span><span class="p">:</span> <span class="s2">&quot;doing more homework&quot;</span><span class="p">,</span>
       <span class="nt">&quot;done&quot;</span><span class="p">:</span> <span class="kc">false</span><span class="p">,</span>
-      <span class="nt">&quot;statusz&quot;</span><span class="p">:</span> <span class="s2">&quot;new&quot;</span>
+      <span class="nt">&quot;status&quot;</span><span class="p">:</span> <span class="s2">&quot;new&quot;</span>
     <span class="p">}</span>
   <span class="p">],</span>
   <span class="nt">&quot;count&quot;</span><span class="p">:</span> <span class="mi">2</span><span class="p">,</span>
@@ -915,7 +915,7 @@
       <span class="nt">&quot;id&quot;</span><span class="p">:</span> <span class="mi">3</span><span class="p">,</span>
       <span class="nt">&quot;title&quot;</span><span class="p">:</span> <span class="s2">&quot;hosework&quot;</span><span class="p">,</span>
       <span class="nt">&quot;done&quot;</span><span class="p">:</span> <span class="kc">true</span><span class="p">,</span>
-      <span class="nt">&quot;statusz&quot;</span><span class="p">:</span> <span class="s2">&quot;done&quot;</span>
+      <span class="nt">&quot;status&quot;</span><span class="p">:</span> <span class="s2">&quot;done&quot;</span>
     <span class="p">}</span>
   <span class="p">],</span>
   <span class="nt">&quot;count&quot;</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span>
