deploy: cea79638aeaf7453afca55977c8d51a9fa67bfee

--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,11 @@
 <p><strong>Akkor mit kérdezhetek meg a laborvezetőtől?</strong> Röviden: <a href="https://stackoverflow.com/help/how-to-ask">https://stackoverflow.com/help/how-to-ask</a>. Hosszabban: Ha valamivel elakadsz, értsd meg a problémát. A probléma nem az, hogy "nem működik" vagy "nem tudom, hogyan csináljam". Akkor tudsz jól kérdezni, ha már körüljártad a problémát, és azt is meg tudod mutatni, mivel próbálkoztál már.</p>
 <p><strong>Szóval Google és StackOverflow a megoldás?</strong> Nem. Minden tudás, amire szükséged van, már előfordult egyetemi tanulmányaid során. A Google jó, a StackOverflow még jobb.... De! A választ is meg kell érteni. Lehet, hogy a megtalált válasz megoldás, csak épp nem a te problémádra.</p>
 <p><strong>Sok a határidő, meg az előírás.</strong> Ez nézőpont kérdése. A mérnök nem csak programozni tud, hanem meghatározott keretek között dolgozni. Mert a világ bonyolult, és a bonyolultságot szabályokkal lehet kordában tartani. Ha időd engedi, érdemes megnézni, mint mond Robert C. Martin (Bob Martin, "Uncle Bob") arról, honnan származik a szoftverfejlesztői szakmai: <a href="https://www.youtube.com/watch?v=ecIWPzGEbFc">https://www.youtube.com/watch?v=ecIWPzGEbFc</a></p>
+<hr />
+<div class="admonition note">
+<p class="admonition-title">Javítás az anyagban</p>
+<p>A tárgy hallgatóinak az anyagban történő javításért, kiegészítésért plusz pontot adunk! Ha hibát találsz, vagy kiegészítenéd/pontosítanád a feladatleírásokat, nyiss egy <em>pull request</em>-et! A repository linkjét a jobb felső sarokban találod.</p>
+</div>
 <div class="admonition quote">
 <p class="admonition-title">Felhasználási feltételek</p>
 <p>Az itt található oktatási segédanyagok a BMEVIAUAC09 tárgy hallgatóinak készültek. Az anyagok oly módú felhasználása, amely a tárgy oktatásához nem szorosan kapcsolódik, csak a szerző(k) és a forrás megjelölésével történhet.</p>
