--- a/GitHub/index.html
+++ b/GitHub/index.html
@@ -1065,7 +1065,7 @@ git push
 <p><img alt="GitHub create pull request" src="../images/github/github-create-pull-request-4.png" /></p>
 </li>
 <li>
-<p>A <em>pull request</em> hatására le fog futni egy értékelés. Ennek eredényét a pull request alatt kommentben fogod látni.</p>
+<p>A <em>pull request</em> hatására le fog futni egy értékelés. Ennek eredményét a pull request alatt kommentben fogod látni.</p>
 <p>Ez az értékelés minden labor esetében más lesz. Egyes laboroknál a programodat lefuttatjuk, és előzetes pontszámot is kapsz. Más laboroknál csak "szintaktikai ellenőrzést" végzünk.</p>
 <p><img alt="GitHub create pull request" src="../images/github/github-pull-request-eval-result.png" /></p>
 <p>Ha a kiértékelés eredményével kapcsolatban több információra van szükséged, mint amit itt látsz, a <em>GitHub Actions</em> webes felülete segítségül szolgálhat. Erről <a href="../GitHub-Actions/">itt</a> találsz egy rövid ismertetőt.</p>
@@ -1073,8 +1073,11 @@ git push
 <li>
 <p>Ha nem vagy megelégedve a munkáddal, akkor még javíthatsz rajta. Ehhez kommitolj és pusholj újra. Ha továbbra is a megfelelő ágon dolgozol, akkor a <em>pull request</em> újból le fogja futtatni a kiértékelést. Arra kérünk, hogy <strong>MAXIMUM 5 alkalommal</strong> futtasd le a kiértékelést!</p>
 <div class="admonition tip">
-<p class="admonition-title">Javítás</p>
-<p>Ha úgy látod, hogy a megoldásodat még javítani akarod, és nem szeretnéd, hogy mindig lefusson az értékelés, akkor <strong>zárd le</strong> a pull request-et a webes felületen. Ha kész vagy, nyiss majd egy újat.</p>
+<p class="admonition-title">Megoldás javítása kiértékelés nélkül</p>
+<p>Ha úgy látod, hogy a megoldásodat még javítani akarod, és nem szeretnéd, hogy mindig lefusson az értékelés, akkor állítsd át a pull request-et a webes felületen <strong>draft</strong> állapotra.</p>
+<p><img alt="GitHub create pull request" src="../images/github/github-convert-pr-to-draft.png" /></p>
+<p>Ezzel az állapottal jelzed, hogy még dolgozol. Kommitolj és pusholj. Ilyenkor nem fog futni kiértékelés. Ha végeztél, akkor vissza <strong>kell</strong> állítanod a pull request-et: menj a PR aljára és kattints a "Ready for review" gombra. Ennek hatására visszaáll a PR és le fog futni az automata értékelés.</p>
+<p><img alt="GitHub create pull request" src="../images/github/github-draft-pr-ready.png" /></p>
 </div>
 <div class="admonition info">
 <p class="admonition-title">Maximum 5</p>
@@ -1082,11 +1085,11 @@ git push
 </div>
 </li>
 <li>
-<p><strong>VÉGEZETÜL</strong>, ha kész vagy, a <em>pull request</em>-et rendeld a laborvezetődhöz. Ez a lépés feltétlenül fontos, ez jelzi a beadást.</p>
+<p><strong>VÉGEZETÜL</strong>, ha kész vagy, a <em>pull request</em>-et rendeld a <strong>laborvezetődhöz</strong>. Ez a lépés feltétlenül fontos, ez jelzi a beadást.</p>
 <p><img alt="GitHub create pull request" src="../images/github/github-create-pull-request-3.png" /></p>
 <div class="admonition error">
 <p class="admonition-title">Pull request nélkül</p>
-<p>Ha nincs pull request-et, vagy van, de nincs a laborvezetőhöz rendelve, akkor úgy tekintjük, hogy még nem vagy készen, és nem adtad be a megoldást.</p>
+<p>Ha nincs pull request-et, vagy nincs a laborvezetőhöz rendelve, akkor úgy tekintjük, hogy még nem vagy készen, és nem adtad be a megoldást.</p>
 </div>
 <div class="admonition success">
 <p class="admonition-title">Végeztél</p>
