deploy: c321b2c93ffcbb7aee9ecff11952a4620ee2c107

--- a/Lab-ReportingServices/index.html
+++ b/Lab-ReportingServices/index.html
@@ -1002,7 +1002,7 @@
 <span class="p">:</span><span class="n">setvar</span> <span class="n">SqlSamplesSourceDataPath</span> <span class="ss">&quot;C:\work\Adventure Works 2014 OLTP Script\&quot;</span>
 </code></pre></div>
 
-<p>Ha beleszerkesztesz az elérési útvonaba, ügyelj hogy a végén maradjon perjel!</p>
+<p>Ha beleszerkesztesz az elérési útvonalba, ügyelj hogy a végén maradjon perjel!</p>
 </div>
 </li>
 <li>
