deploy: f7334f52fc09976f0cf33284467dc6ab4b00cebe

--- a/Lab-QueryOptimization/index.html
+++ b/Lab-QueryOptimization/index.html
@@ -1075,7 +1075,7 @@
 <li>MacOS-en Docker-rel futtatható.</li>
 <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> vagy más, markdown kompatibilis szerkesztő</li>
 <li><a href="https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms">SQL Server Management Studio</a>, vagy kipróbálható a platformfüggetlen <a href="https://docs.microsoft.com/en-us/sql/azure-data-studio/download">Azure Data Studio</a> is</li>
-<li>Az adatbázist létrehozó script: <a href="https://bmeviauac01.github.io/adatvezerelt/db/mssql.sql">mssql.sql</a></li>
+<li>Az adatbázist létrehozó script: <a href="https://raw.githubusercontent.com/bmeviauac01/adatvezerelt/master/docs/db/mssql.sql">mssql.sql</a></li>
 <li>GitHub account és egy git kliens</li>
 </ul>
 <p>A labor elvégzéséhez használható segédanyagok és felkészülési anyagok:</p>
@@ -1146,7 +1146,7 @@
 <p>Hozz létre egy új adatbázist (ha még nem létezik). Az adatbázis neve legyen a Neptun kódod: <em>Object Explorer</em>-ben Databases-en jobb kattintás, és <em>Create Database</em>.</p>
 </li>
 <li>
-<p>Hozd létre a minta adatbázist a <a href="https://bmeviauac01.github.io/adatvezerelt/db/mssql.sql">generáló script</a> lefuttatásával. Nyiss egy új <em>Query</em> ablakot, másold be a script tartalmát, és futtasd le. Ügyelj az eszköztáron levő legördülő menüben a megfelelő adatbázis kiválasztására.</p>
+<p>Hozd létre a minta adatbázist a <a href="https://raw.githubusercontent.com/bmeviauac01/adatvezerelt/master/docs/db/mssql.sql">generáló script</a> lefuttatásával. Nyiss egy új <em>Query</em> ablakot, másold be a script tartalmát, és futtasd le. Ügyelj az eszköztáron levő legördülő menüben a megfelelő adatbázis kiválasztására.</p>
 </li>
 </ol>
 <p><img alt="Adatbázis kiválasztása" src="../images/sql-management-database-dropdown.png" /></p>
