--- a/Lab-MSSQL/Feladat-2/index.html
+++ b/Lab-MSSQL/Feladat-2/index.html
@@ -1001,7 +1001,7 @@
 <p>Írj tárolt eljárást <code>CheckInvoice</code> néven, aminek bemeneti paramétere egy <code>int</code> típusú és <code>@invoiceid</code> nevű számlaazonosító.</p>
 <ul>
 <li>Az eljárás ellenőrizze, hogy a paraméterben kapott számlához (<code>Invoice</code>) kapcsolódó számlatételeken (<code>InvoiceItem</code>) szereplő mennyiség (<code>Amount</code>) egyezik-e a kapcsolódó megrendeléstétel (<code>OrderItem</code>) mennyiségével. (Az <code>InvoiceItem</code> rekord hivatkozik a kapcsolódó <code>OrderItem</code>-re.)</li>
-<li>Amennyiben eltérés található a kettőben, úgy mindkettő értékét, valamint a termék nevét írd ki a standard outputra az alábbi séma szerint: <code>Difference: Labda (invoice 5 order 6)</code></li>
+<li>Amennyiben eltérés található a kettőben, úgy mindkettő értékét, valamint a termék nevét írd ki a standard outputra az alábbi séma szerint: <code>Difference: Ball (invoice 5 order 6)</code></li>
 <li>Csak akkor írjon bármit a kimenetre a tárolt eljárás, ha problémát talált. Semmiképpen se hagyj teszteléshez használt kiírást az eljárásban!</li>
 <li>Legyen az eljárás <code>int</code> típusú visszatérési értéke 0, ha nem kellett semmit kiírni a kimenetre, és 1, ha kellett.</li>
 </ul>
