--- a/Lab-EFREST/index.html
+++ b/Lab-EFREST/index.html
@@ -1055,18 +1055,21 @@
 <p>A labor elvégzéséhez szükséges eszközök:</p>
 <ul>
 <li>Windows, Linux, vagy MacOS: Minden szükséges program platform független, vagy van platformfüggetlen alternatívája.</li>
+<li><a href="https://www.getpostman.com/">Postman</a></li>
+<li><a href="https://sqlitebrowser.org/">DB Browser for SQLite</a>, ha az adatbázisba szeretnél belezézni (nem feltétlenül szükséges)</li>
+<li>GitHub account és egy git kliens</li>
 <li>Microsoft Visual Studio 2019 <a href="../VisualStudio/">az itt található beállításokkal</a><ul>
 <li>Linux és MacOS esetén Visual Studio Code és a .NET Core SDK-val települő <a href="https://docs.microsoft.com/en-us/dotnet/core/tools/">dotnet CLI</a> használható.</li>
 </ul>
 </li>
-<li><a href="https://dotnet.microsoft.com/download/dotnet-core/3.1">.NET Core 3.1 SDK</a><ul>
-<li>Visual Studio esetén települ, de ha mégse, akkor a fenti linkről kell telepíteni (az SDK-t és <em>nem</em> a runtime-ot.)</li>
-<li>Linux és MacOS esetén telepíteni szükséges.</li>
-</ul>
+<li>
+<p><a href="https://dotnet.microsoft.com/download/dotnet-core/3.1">.NET Core <strong>3.1</strong> SDK</a></p>
+<div class="admonition warning">
+<p class="admonition-title">.NET Core 3.1</p>
+<p>A feladat megoldásához <strong>3.1</strong>-es .NET Core SDK telepítése szükséges.</p>
+<p>Windows-on Visual Studio verzió függvényében lehet, hogy telepítve van (lásd <a href="../VisualStudio/#net-core-sdk-ellenorzese-es-telepitese">itt</a> az ellenőrzés módját); ha nem, akkor a fenti linkről kell telepíteni (az SDK-t és <em>nem</em> a runtime-ot.) Linux és MacOS esetén telepíteni szükséges.</p>
+</div>
 </li>
-<li><a href="https://www.getpostman.com/">Postman</a></li>
-<li><a href="https://sqlitebrowser.org/">DB Browser for SQLite</a>, ha az adatbázisba szeretnél belezézni (nem feltétlenül szükséges)</li>
-<li>GitHub account és egy git kliens</li>
 </ul>
 <p>A labor elvégzéséhez használható segédanyagok és felkészülési anyagok:</p>
 <ul>
