--- a/Lab-MongoDB/Feladat-1/index.html
+++ b/Lab-MongoDB/Feladat-1/index.html
@@ -1142,7 +1142,7 @@
         <span class="n">ID</span> <span class="p">=</span> <span class="n">t</span><span class="p">.</span><span class="n">ID</span><span class="p">.</span><span class="n">ToString</span><span class="p">(),</span>
         <span class="n">Name</span> <span class="p">=</span> <span class="n">t</span><span class="p">.</span><span class="n">Name</span><span class="p">,</span>
         <span class="n">Price</span> <span class="p">=</span> <span class="n">t</span><span class="p">.</span><span class="n">Price</span><span class="p">,</span>
-        <span class="n">InStock</span> <span class="p">=</span> <span class="n">t</span><span class="p">.</span><span class="n">InStock</span>
+        <span class="n">Stock</span> <span class="p">=</span> <span class="n">t</span><span class="p">.</span><span class="n">Stock</span>
     <span class="p">})</span>
     <span class="p">.</span><span class="n">ToList</span><span class="p">();</span>
 </code></pre></div>
