deploy: 4d75f278814c9ed659ad3aefea9a099c68d421fa

--- a/Lab-MSSQL/Feladat-3/index.html
+++ b/Lab-MSSQL/Feladat-3/index.html
@@ -1005,7 +1005,7 @@
 </div>
 <p>Készíts T-SQL programblokkot, amely kitölti az újonnan felvett oszlopot az aktuális adatok alapján.</p>
 <div class="admonition tip">
-<p>Ha például egy <strong>számlán</strong> (<code>Invoice</code>) szerepel 2 darab piros pöttyös labda és 1 darab tollasütőt, akkor 3 tétel szerepel a számlán. Ügyelj rá, hogy számlához (és nem a megrendeléshez) tartozó tételeket kell nézni!</p>
+<p>Ha például egy <strong>számlán</strong> (<code>Invoice</code>) szerepel 2 darab piros pöttyös labda és 1 darab tollasütő, akkor 3 tétel szerepel a számlán. Ügyelj rá, hogy számlához (és nem a megrendeléshez) tartozó tételeket kell nézni!</p>
 </div>
 <div class="admonition example">
 <p class="admonition-title">BEADANDÓ</p>
