deploy: ace187a87c487dd072cfe2184e281338c50a9c39

--- a/Lab-MSSQL/Feladat-2/index.html
+++ b/Lab-MSSQL/Feladat-2/index.html
@@ -1027,7 +1027,7 @@
 </div>
 <div class="admonition example">
 <p class="admonition-title">BEADANDÓ</p>
-<p>Készíts egy képernyőképet az kód futásának eredményéről, amikor valamilyen <strong>eltérést megtalált</strong>. A képet <code>f2.png</code> néven add be. A képernyőképen látszódjon az <em>Object Explorer</em>-ben az <strong>adatbázis neve (a Neptun kódod)</strong> és <strong>a kiírt üzenet</strong> is!</p>
+<p>Készíts egy képernyőképet a kód futásának eredményéről, amikor valamilyen <strong>eltérést megtalált</strong>. A képet <code>f2.png</code> néven add be. A képernyőképen látszódjon az <em>Object Explorer</em>-ben az <strong>adatbázis neve (a Neptun kódod)</strong> és <strong>a kiírt üzenet</strong> is!</p>
 </div>
                 
               
