deploy: 8499d0d98d03ef04bfbcc257b885ab5f97a56325

--- a/GitHub/index.html
+++ b/GitHub/index.html
@@ -1172,7 +1172,7 @@ git push
 <p><img alt="GitHub create pull request" src="../images/github/github-create-pull-request-3.png" /></p>
 <div class="admonition error">
 <p class="admonition-title">Pull request nélkül</p>
-<p>Ha nincs pull request-et, vagy nincs a laborvezetőhöz rendelve, akkor úgy tekintjük, hogy még nem vagy készen, és nem adtad be a megoldást.</p>
+<p>Ha nincs pull request-ed, vagy nincs a laborvezetőhöz rendelve, akkor úgy tekintjük, hogy még nem vagy készen, és nem adtad be a megoldást.</p>
 </div>
 <div class="admonition success">
 <p class="admonition-title">Végeztél</p>
