deploy: db4fc29090a7170e9735fcf36500a88e8ec20c2a

--- a/Lab-MongoDB/Feladat-4/index.html
+++ b/Lab-MongoDB/Feladat-4/index.html
@@ -935,7 +935,7 @@
 <p>A megrendelések kollekcióján aggregációs pipeline-t használva meg tudod állapítani az adott <code>CustomerID</code>-hez tartozó összmegrendelések értékét.</p>
 </li>
 <li>
-<p>Végezetül csak a meglevő információkat kell "összefésülnöd". Központi telephelye minden vevőnek van, viszont megrendelése nem garantált — figyelj oda, hogy ekkor az <code>TotalOrders</code> elvárt értéke <code>null</code>!</p>
+<p>Végezetül csak a meglevő információkat kell "összefésülnöd". Központi telephelye minden vevőnek van, viszont megrendelése nem garantált — figyelj oda, hogy ekkor a <code>TotalOrders</code> elvárt értéke <code>null</code>!</p>
 </li>
 <li>
 <p>A kód kipróbálásához a weboldal <code>Customers</code> menüpontjára kell navigálni. Itt táblázatos formában megjelenítve láthatod az összegyűjtött információkat. Teszteléshez alkalmazhatod az előző feladatban elkészített <code>Add new order</code> funkciót — itt új megrendelés felvétele esetén az előző feladatban bedrótozott vevő mellett növekednie kell a hozzá tartozó megrendelések összértékének.</p>
