deploy: ad0ff425aee934503a19238ceee6a190ebb71999

--- a/Lab-ReportingServices/Feladat-1/index.html
+++ b/Lab-ReportingServices/Feladat-1/index.html
@@ -1169,7 +1169,7 @@
 <li>
 <p>A csoportként megadott elemeknek automatikusan létrehozott oszlopokat a táblázatban a rendszer. Mivel már korábban is felvettük őket, ezért most kétszer is szerepelnek; töröljük őket. A felettük található szürke téglalapra kattintva jelöljük ki a <strong>jobb oldali</strong> <em>Date</em> és <em>Order</em> oszlopokat, és töröljük ki őket (jobb kattintás és <em>Delete Columns</em>).</p>
 <p><img alt="Duplikált oszlopok" src="../../images/reportingservices/rs-group-by-duplicated-columns.png" /></p>
-<p>Az új <em>Date</em> oszlop formátuma ezzel visszaállt az eredeti formátumra, de a <em>Text Style Properties</em> segítségével újra be tudjuk állítani.</p>
+<p>Az új <em>Date</em> oszlop formátuma ezzel visszaállt az eredeti formátumra, de a <em>Text Box Properties</em> segítségével újra be tudjuk állítani.</p>
 <p>Ha most megnézzük a <em>Preview</em> fület, láthatjuk, hogy az általunk megadott szempontok szerint (és az általunk megadott sorrendben) csoportosításra kerülnek a riport sorai.</p>
 <p><img alt="Csoportosított táblázat" src="../../images/reportingservices/rs-table-preview-3.png" /></p>
 </li>
