deploy: 1ed51d7ec1d2fef8740ce9992a5686e12a2d15bc

--- a/Lab-ReportingServices/Feladat-3/index.html
+++ b/Lab-ReportingServices/Feladat-3/index.html
@@ -1057,6 +1057,7 @@
 <div class="admonition example">
 <p class="admonition-title">BEADANDÓ</p>
 <p>Készíts egy képernyőképet a <strong>report előnézetéről</strong> a preview fülön. A képet a megoldásban <code>f3.png</code> néven add be. A képernyőképen a Visual Studio ablaka, és azon belül a riport előnézete látszódjon. Ellenőrizd, hogy a <strong>Neptun kódod</strong> látható-e táblázatban!</p>
+<p>A megváltozottott Visual Studio projektet (és annak fájljait) is töltsd fel.</p>
 </div>
                 
               
