deploy: 78c0a6d8f2188eed8f9debaeeb2a2b5fb9b361c3

--- a/Lab-QueryOptimization/index.html
+++ b/Lab-QueryOptimization/index.html
@@ -1099,10 +1099,10 @@
 <p>Ezt a fájlt szerkeszd.</p>
 </li>
 <li>
-<p>Ha képet készítesz, azt is tedd a repository alá a többi fájl mellé. Így relatív elérési úvonallal (fájlnév) fogod tudni hivatkozni.</p>
+<p>Ha képet készítesz, azt is tedd a repository alá a többi fájl mellé. Így relatív elérési útvonallal (fájlnév) fogod tudni hivatkozni.</p>
 <div class="admonition warning">
-<p class="admonition-title">Ékezetes fájlnév kerülendő</p>
-<p>Legjobb, ha nem használsz ékezetes karaktereket és szóközöket a fájlnévben.</p>
+<p class="admonition-title">Fájlnév: csupa kisbetű ékezet nélkül</p>
+<p>A képek fájlnevében ne használj ékezetes karaktereket, szóközöket, se kis- és nagybetűket keverve. A különböző platformok és a git eltérően kezelik a fájlneveket. A GitHub webes felületén akkor fog minden rendben megjelenni, ha csak az angol ábécé kisbetűit használod a fájlnevekben.</p>
 </div>
 </li>
 <li>
