deploy: ac141c65a099576dc6b865413ed4c44291264805

--- a/GitHub/index.html
+++ b/GitHub/index.html
@@ -1009,7 +1009,7 @@
 <p>Alább részletesen bemutatjuk a beadás menetét. Itt egy rövid összefoglaló az áttekintéshez, illetve a helyes beadás ellenőrzéséhez.</p>
 <ol>
 <li>
-<p>A munkádat a labor anyagban található linken keresztül létrehozott GitHub repository-ban kell elkészítsd.</p>
+<p>A munkádat Moodle-ben található GitHub Classroom meghívó linken keresztül létrehozott GitHub repository-ban kell elkészítsd.</p>
 </li>
 <li>
 <p>A megoldáshoz készíts egy külön ágat, ne a <em>master</em>-en dolgozz. Erre az ágra akárhány kommitot tehetsz. Mindenképpen pushold a megoldást.</p>
@@ -1027,7 +1027,7 @@
 <p><a href="https://github.com/join">Regisztrálj</a> egy GitHub accountot, ha még nincs.</p>
 </li>
 <li>
-<p>A feladat beadásához tartozó linket nyisd meg. Ez minden feladathoz más lesz, a feladat leírásában találod.</p>
+<p>Moodle-ben a kurzus oldalán keresd meg a laborhoz tartozó meghívó URL-t. Ez minden laborhoz más lesz, ügyelj rá, hogy a megfelelő linket használd.</p>
 </li>
 <li>
 <p>Ha kéri, adj engedélyt a <em>GitHub Classroom</em> alkalmazásnak, hogy használja az account adataidat.</p>
