deploy: f7602baa30ae852523dc387342985a6aec8b009e

--- a/Lab-ReportingServices/index.html
+++ b/Lab-ReportingServices/index.html
@@ -1147,7 +1147,7 @@
 <li>Microsoft SQL Server: Express változat ingyenesen használható, avagy Visual Studio mellett feltelepülő <em>localdb</em> változat is megfelelő</li>
 <li><a href="https://docs.microsoft.com/en-us/sql/ssms/download-sql-server-management-studio-ssms">SQL Server Management Studio</a></li>
 <li>Az adatbázist létrehozó script: <a href="adventure-works-2014-oltp-script.zip">adventure-works-2014-oltp-script.zip</a></li>
-<li>Microsoft Visual Studio 2019: Community verzió is megfelelő</li>
+<li>Microsoft Visual Studio 2019 (2022 <strong>nem</strong> jó): Community verzió is megfelelő</li>
 <li>Report Server Projekt támogatás Visual Studio-hoz: <a href="https://marketplace.visualstudio.com/items?itemName=ProBITools.MicrosoftReportProjectsforVisualStudio">Microsoft Reporting Services Projects extension</a> (Érdemes <a href="https://docs.microsoft.com/en-us/visualstudio/extensibility/how-to-update-a-visual-studio-extension?view=vs-2019">frissen tartani</a> ezt az extension-t, mert gyakran van belőle kiadás.)</li>
 <li>GitHub account és egy git kliens</li>
 </ul>
