--- a/Lab-EFREST/index.html
+++ b/Lab-EFREST/index.html
@@ -1161,7 +1161,7 @@
 <li><a href="https://www.getpostman.com/">Postman</a></li>
 <li><a href="https://sqlitebrowser.org/">DB Browser for SQLite</a>, ha az adatbázisba szeretnél belezézni (nem feltétlenül szükséges)</li>
 <li>GitHub account és egy git kliens</li>
-<li>Microsoft Visual Studio 2019 <a href="../VisualStudio/">az itt található beállításokkal</a><ul>
+<li>Microsoft Visual Studio 2019/2022 <a href="../VisualStudio/">az itt található beállításokkal</a><ul>
 <li>Linux és MacOS esetén Visual Studio Code és a .NET Core SDK-val települő <a href="https://docs.microsoft.com/en-us/dotnet/core/tools/">dotnet CLI</a> használható.</li>
 </ul>
 </li>
