--- a/Lab-MongoDB/index.html
+++ b/Lab-MongoDB/index.html
@@ -1148,7 +1148,7 @@
 <li>Robo 3T (<a href="https://robomongo.org/download">letöltés</a>)</li>
 <li>Minta adatbázis kódja (<a href="https://bmeviauac01.github.io/adatvezerelt/db/mongo.js">mongo.js</a>)</li>
 <li>GitHub account és egy git kliens</li>
-<li>Microsoft Visual Studio 2019 <a href="../VisualStudio/">az itt található beállításokkal</a><ul>
+<li>Microsoft Visual Studio 2019/2022 <a href="../VisualStudio/">az itt található beállításokkal</a><ul>
 <li>Linux és MacOS esetén Visual Studio Code és a .NET Core SDK-val települő <a href="https://docs.microsoft.com/en-us/dotnet/core/tools/">dotnet CLI</a> használható.</li>
 </ul>
 </li>
