deploy: 372a86d3f7d7fde08711a84dd25adf46b00e8983

--- a/Lab-ReportingServices/Feladat-1/index.html
+++ b/Lab-ReportingServices/Feladat-1/index.html
@@ -1233,7 +1233,7 @@
 <p>A <em>Date</em> mezőt húzzuk rá az imént "rajzolt" táblázat első oszlopára. Ilyesmi eredményt kell kapjunk:</p>
 <p><img alt="Date oszlop hozzáadása" src="../../images/reportingservices/rs-table-add-date-col.png" /></p>
 <div class="admonition note">
-<p>A második sorban látható <code>[Date]</code> jelöli a kiértékelendő kifejezést, míg az eső sorban látható "Date" felirat lesz az oszlop fejléce a riportban – ez utóbbit át is írhatjuk.</p>
+<p>A második sorban látható <code>[Date]</code> jelöli a kiértékelendő kifejezést, míg az első sorban látható "Date" felirat lesz az oszlop fejléce a riportban – ez utóbbit át is írhatjuk.</p>
 </div>
 </li>
 <li>
