--- a/Lab-EFREST/Feladat-1/index.html
+++ b/Lab-EFREST/Feladat-1/index.html
@@ -1339,7 +1339,7 @@
 <span class="p">}</span>
 </code></pre></div>
 <div class="admonition important">
-<p>Figyeljünk a tranzakcióra! Először ellenőriznünk kell, van-e már hasonló név. Ha igen, akkor a hibát kivétellel jelezzük. Ha beszúrhatú a rekord, akkor a beszúrás után a tranzakciót is kommitálnunk kell. És mivel az ID-t az adatbázis generálja, a repository függvény visszaadja a létrehozott entitást, benne az új ID-val.</p>
+<p>Figyeljünk a tranzakcióra! Először ellenőriznünk kell, van-e már hasonló név. Ha igen, akkor a hibát kivétellel jelezzük. Ha beszúrható a rekord, akkor a beszúrás után a tranzakciót is kommitálnunk kell. És mivel az ID-t az adatbázis generálja, a repository függvény visszaadja a létrehozott entitást, benne az új ID-val.</p>
 </div>
 </li>
 <li>
