deploy: 4a666c9f4513fa58bab63728f8e49997c6bde67d

--- a/en/GitHub-credentials/index.html
+++ b/en/GitHub-credentials/index.html
@@ -286,7 +286,7 @@
 <ol>
 <li>Open <code>Credential Manager</code> from the Start menu.</li>
 <li>On the page <code>Windows Credentials</code> find the entry for GitHub and delete it.
-   <a class="glightbox" data-desc-position="bottom" data-height="auto" data-width="100%" href="../images/git-credential-remove.png"><img alt="Delete GitHub credential" src="../images/git-credential-remove.png"/></a></li>
+   <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="100%" href="../images/git-credential-remove.png"><img alt="Delete GitHub credential" src="../images/git-credential-remove.png"/></a></li>
 </ol>
 <hr/>
 <div class="md-source-file">
