--- a/hu/GitHub-credentials/index.html
+++ b/hu/GitHub-credentials/index.html
@@ -286,7 +286,7 @@
 <ol>
 <li>Nyisd meg a <code>Credential Manager</code>-t a Start menüből.</li>
 <li>A <code>Windows Credentials</code> oldalon keresd meg a GitHubra mutató bejegyzéseket, és töröld őket.
-   <a class="glightbox" data-desc-position="bottom" data-height="auto" data-width="100%" href="../images/git-credential-remove.png"><img alt="GitHub belépési adat törlése" src="../images/git-credential-remove.png"/></a></li>
+   <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="100%" href="../images/git-credential-remove.png"><img alt="GitHub belépési adat törlése" src="../images/git-credential-remove.png"/></a></li>
 </ol>
 <hr/>
 <div class="md-source-file">
