--- a/en/Lab-EFREST/index.html
+++ b/en/Lab-EFREST/index.html
@@ -691,7 +691,7 @@
 </li>
 <li>
 <p>Open Postman and send a GET request to URL <a href="http://localhost:5000/api/statuses/neptun">http://localhost:5000/api/statuses/neptun</a> (with your Neptun code in the URL).</p>
-<p><a class="glightbox" data-desc-position="bottom" data-height="auto" data-width="100%" href="../images/efrest/rest-postman-get-statuses.png"><img alt="Query statuses with Postman" src="../images/efrest/rest-postman-get-statuses.png"/></a></p>
+<p><a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="100%" href="../images/efrest/rest-postman-get-statuses.png"><img alt="Query statuses with Postman" src="../images/efrest/rest-postman-get-statuses.png"/></a></p>
 <div class="admonition success">
 <p>The query is successful if Postman reports status code 200, and the result is empty. If there is an error, check the Output window in Visual Studio and the running application console window.</p>
 </div>
