--- a/en/Lab-MongoDB/index.html
+++ b/en/Lab-MongoDB/index.html
@@ -673,7 +673,7 @@ docker run --name swlab1-mongo -p 27017:27017 -d mongo</code></p>
 </li>
 <li>
 <p>Compile the code and start the app again, then check the starting page. You should see the Neptune code at the bottom of the page.</p>
-<p><a class="glightbox" data-desc-position="bottom" data-height="auto" data-width="100%" href="../images/mongo/mongo-neptun-footer.png"><img alt="Neptun code in the footer" src="../images/mongo/mongo-neptun-footer.png"/></a></p>
+<p><a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="100%" href="../images/mongo/mongo-neptun-footer.png"><img alt="Neptun code in the footer" src="../images/mongo/mongo-neptun-footer.png"/></a></p>
 </li>
 </ol>
 <div class="admonition warning">
