--- a/en/GitHub-Actions/index.html
+++ b/en/GitHub-Actions/index.html
@@ -457,7 +457,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
