--- a/hu/404.html
+++ b/hu/404.html
@@ -421,7 +421,7 @@
         
   
   <span class="md-ellipsis">
-    Visual Studio & .NET Core SDK telepítése
+    Visual Studio & .NET SDK telepítése
   </span>
   
 
