--- a/hu/GitHub-credentials/index.html
+++ b/hu/GitHub-credentials/index.html
@@ -447,7 +447,7 @@
         
   
   <span class="md-ellipsis">
-    Visual Studio & .NET Core SDK telepítése
+    Visual Studio & .NET SDK telepítése
   </span>
   
 
