--- a/en/404.html
+++ b/en/404.html
@@ -421,7 +421,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
