--- a/en/GitHub-credentials/index.html
+++ b/en/GitHub-credentials/index.html
@@ -447,7 +447,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
