--- a/en/GitHub/index.html
+++ b/en/GitHub/index.html
@@ -523,7 +523,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
