--- a/en/Lab-MSSQL/index.html
+++ b/en/Lab-MSSQL/index.html
@@ -445,7 +445,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
