--- a/en/index.html
+++ b/en/index.html
@@ -521,7 +521,7 @@
         
   
   <span class="md-ellipsis">
-    Install Visual Studio & .NET Core SDK
+    Install Visual Studio & .NET SDK
   </span>
   
 
