--- a/hu/GitHub-Actions/index.html
+++ b/hu/GitHub-Actions/index.html
@@ -457,7 +457,7 @@
         
   
   <span class="md-ellipsis">
-    Visual Studio & .NET Core SDK telepítése
+    Visual Studio & .NET SDK telepítése
   </span>
   
 
