--- a/hu/index.html
+++ b/hu/index.html
@@ -521,7 +521,7 @@
         
   
   <span class="md-ellipsis">
-    Visual Studio & .NET Core SDK telepítése
+    Visual Studio & .NET SDK telepítése
   </span>
   
 
