--- a/hu/laborvezetoknek/index.html
+++ b/hu/laborvezetoknek/index.html
@@ -439,7 +439,7 @@
         
   
   <span class="md-ellipsis">
-    Visual Studio & .NET Core SDK telepítése
+    Visual Studio & .NET SDK telepítése
   </span>
   
 
