--- a/hu/GitHub-credentials/index.html
+++ b/hu/GitHub-credentials/index.html
@@ -686,7 +686,7 @@
 <ol>
 <li>Nyisd meg a <code>Credential Manager</code>-t a Start menüből.</li>
 <li>A <code>Windows Credentials</code> oldalon keresd meg a GitHubra mutató bejegyzéseket, és töröld őket.
-   <a class="glightbox" href="../images/git-credential-remove.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="GitHub belépési adat törlése" src="../images/git-credential-remove.png" /></a></li>
+   <a class="glightbox" href="../images/git-credential-remove.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="GitHub belépési adat törlése" src="../images/git-credential-remove.png" /></a></li>
 </ol>
 
     <hr>
