--- a/hu/Lab-EFREST/index.html
+++ b/hu/Lab-EFREST/index.html
@@ -1270,7 +1270,7 @@
 </li>
 <li>
 <p>Nyisd meg a Postman-t és küldj a <a href="http://localhost:5000/api/status/neptun">http://localhost:5000/api/status/neptun</a> címre egy GET kérést (a saját Neptun kódodat kell itt is az URL végére írni).</p>
-<p><a class="glightbox" href="../images/efrest/rest-postman-get-statuses.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Státuszok lekérdezése Postman-nel" src="../images/efrest/rest-postman-get-statuses.png" /></a></p>
+<p><a class="glightbox" href="../images/efrest/rest-postman-get-statuses.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Státuszok lekérdezése Postman-nel" src="../images/efrest/rest-postman-get-statuses.png" /></a></p>
 <div class="admonition success">
 <p>Akkor sikeres a hívás, ha a Postman szerint 200 a válaszkód, és üres a válasz. Ha valami hiba lenne, akkor a Visual Studio Output ablakát ill. a futó konzol alkalmazás logját érdemes nézni.</p>
 </div>
