--- a/hu/Lab-MongoDB/index.html
+++ b/hu/Lab-MongoDB/index.html
@@ -1296,7 +1296,7 @@
 </li>
 <li>
 <p>Fordítsd le és indítsd el az alkalmazást ismét, nézd meg a kezdőoldalt. Az alján kell lásd a saját Neptun kódod.</p>
-<p><a class="glightbox" href="../images/mongo/mongo-neptun-footer.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Neptun kód a láblécben" src="../images/mongo/mongo-neptun-footer.png" /></a></p>
+<p><a class="glightbox" href="../images/mongo/mongo-neptun-footer.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Neptun kód a láblécben" src="../images/mongo/mongo-neptun-footer.png" /></a></p>
 </li>
 </ol>
 <div class="admonition warning">
