--- a/en/GitHub-credentials/index.html
+++ b/en/GitHub-credentials/index.html
@@ -686,7 +686,7 @@
 <ol>
 <li>Open <code>Credential Manager</code> from the Start menu.</li>
 <li>On the page <code>Windows Credentials</code> find the entry for GitHub and delete it.
-   <a class="glightbox" href="../images/git-credential-remove.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Delete GitHub credential" src="../images/git-credential-remove.png" /></a></li>
+   <a class="glightbox" href="../images/git-credential-remove.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="Delete GitHub credential" src="../images/git-credential-remove.png" /></a></li>
 </ol>
 
     <hr>
